update BaseOverlayButton.java